cmake_minimum_required(VERSION 3.12)

option(USE_STATIC_LIB "compile delfem2 with static library?" OFF)

IF (USE_STATIC_LIB)
  message("$$$$$$$$$$$$$$$$$$$$$")
  message("generate project as STATIC library: USE_STATIC_LIB=${USE_STATIC_LIB}")
  project(examples_oldgl_glfw_static)
  add_subdirectory(dfm2_static_glfwold)
ELSE ()
  message("$$$$$$$$$$$$$$$$$$$$$")
  message("generate project as HEADER-ONLY library: USE_STATIC_LIB=${USE_STATIC_LIB}")
  project(examples_oldgl_glfw_hdronly)
ENDIF ()

# fem
add_subdirectory(600_Fem2DHelmholtz)
add_subdirectory(601_FemPlateBendingMitc3)
add_subdirectory(602_Fem3DEigen)
add_subdirectory(603_Fem3DStiffwarp)
add_subdirectory(604_FemCloth_DynamicTriangle)
add_subdirectory(605_FemClothInternal)
add_subdirectory(606_PbdGrid2D)
add_subdirectory(607_PbdCloth)
add_subdirectory(608_StableFluids2Staggered)
add_subdirectory(609_DefLaplacian)
add_subdirectory(610_DefArapEdge)
add_subdirectory(611_DefArap)
add_subdirectory(612_BemPotentialFlow3D)
add_subdirectory(613_FemRod3Darboux)
add_subdirectory(614_FemMitc3Eigen)
add_subdirectory(615_PbdClothCad)
add_subdirectory(616_FemRod3StraightStatic)
add_subdirectory(617_FemRod3HairDarbouxSelfcollision)
add_subdirectory(618_Fem3Tet)
add_subdirectory(619_Sph3)
add_subdirectory(620_FemClothSelfCollision)
add_subdirectory(621_Fem2)
add_subdirectory(622_FemHairDarbouxStatic)
add_subdirectory(623_FemHairDarbouxDynamic)
add_subdirectory(624_DefArapUi)
add_subdirectory(625_Fem2MasterSlave)
add_subdirectory(626_RgdRotation)
add_subdirectory(627_Rgd2dCollision)
add_subdirectory(628_FemHyper3)
add_subdirectory(629_Rgd2Caterpillar)
add_subdirectory(630_FemRod2Static)
add_subdirectory(631_FemRod2Dynamic)
add_subdirectory(632_PbdSpring2)
add_subdirectory(633_Mpm2Snow)
add_subdirectory(634_FemLinearSolid3)
add_subdirectory(635_FemRod2Edit)
add_subdirectory(636_InvertibleFem)
add_subdirectory(637_StableFluids2CellCentered)